--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "opensans-regular", sans-serif;
   color: white;
 }
 
@@ -9,12 +9,20 @@ h1 {
   font-size: 90px;
 }
 
+h2 {
+  font-weight: 500;
+  margin: 100px 0 20px;
+  font-size: 18px;
+}
+
 h3 {
   font-weight: 400;
   margin-bottom: 25px;
   font-size: 22px;
   color: #b8b9ba;
   padding: 20px 250px 20px;
+  margin: auto;
+  width: 85%;
 }
 a {
   color: white;
@@ -63,6 +71,88 @@ nav li {
   padding-top: 4em;
 }
 
-.headline-down-button{
+.headline-down-button {
   padding-top: 14em;
+}
+
+hr {
+  width: 40%;
+}
+
+.section-row {
+  margin: auto;
+  width: 60%;
+  max-width: 1020px;
+}
+
+section {
+  padding: 1em 1em 1em 1em;
+  height: 100%;
+}
+
+// ABOUT ME SECTION
+
+#about-me {
+  padding-top: 6em;
+  background: #2b2b2b;
+}
+
+.profile-picture {
+  vertical-align: middle;
+  width: 70%;
+  height: auto;
+}
+
+#div-about-me {
+  float: right;
+  width: 75%;
+  margin: auto;
+}
+
+#div-profile-picture {
+  width: 25%;
+  float: left;
+  margin-top: 3.5em;
+  margin-left: -3em;
+}
+
+#div-about-me h2 {
+  margin: 2em 2em 0em 0em;
+  font-weight: 600;
+  font-size: 25px;
+}
+
+#div-about-me span, p {
+  line-height: 30px;
+  margin: 1em 0em 2em 0em;
+  font-weight: 100;
+  font-size: 16px;
+  color: #909294;
+}
+
+#about-me-download {
+  margin-top: 3.6em;
+  color: white;
+  float: right;
+  width: 50%;
+  text-align: center;
+
+}
+
+#about-me-download span {
+color: white;
+padding: 5px 5px 5px 15px;
+font-weight: 500;
+}
+
+#about-me-button   {
+background: #505152;
+padding: 8px 0px 8px 0px;
+width:75%;
+border-radius:4px;
+}
+
+#about-me-contact {
+  float: left;
+  width: 50%;
 }
