--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -11,19 +11,13 @@ h1 {
 
 h2 {
   font-weight: 500;
-  margin: 100px 0 20px;
-  font-size: 18px;
 }
 
 h3 {
-  font-weight: 400;
-  margin-bottom: 25px;
   font-size: 22px;
-  color: #b8b9ba;
-  padding: 20px 250px 20px;
-  margin: auto;
-  width: 85%;
+  font-weight: 400;
 }
+
 a {
   color: white;
   padding-left: 12px;
@@ -34,16 +28,13 @@ span {
 }
 
 header {
-  padding: 20px 0 150px;
-}
-
-header {
-  height: 800px;
+  height: 100%;
   min-height: 500px;
   width: 100%;
   background: url("https://unsplash.it/1080/720/?image=377") no-repeat fixed
     center / cover;
   text-align: center;
+  overflow: hidden;
 }
 
 ul {
@@ -54,6 +45,10 @@ nav ul {
   color: white;
   list-style: none;
   font-size: 20;
+}
+
+div{
+  display: block;
 }
 
 nav li {
@@ -67,8 +62,17 @@ nav li {
   height: 20px;
 }
 
-.headline {
-  padding-top: 4em;
+.headline h3 {
+  margin-bottom: 25px;
+  color: #b8b9ba;
+  padding: 20px 40px 20px 40px;
+  margin: auto;
+  width: 80%;
+}
+
+.headline h2 {
+  font-weight: 500;
+  margin: 100px 0 20px;
 }
 
 .headline-down-button {
@@ -76,24 +80,38 @@ nav li {
 }
 
 hr {
-  width: 40%;
+  width: 70%;
 }
 
 .section-row {
   margin: auto;
-  width: 60%;
+  width: 96%;
   max-width: 1020px;
+  margin: auto;
 }
 
 section {
   padding: 1em 1em 1em 1em;
-  height: 100%;
+  height: auto;
+  padding-top: 3em;
+  position: relative;
+  margin: auto;
+  overflow: hidden;
 }
+
+#navigation-links {
+//  position: fixed;
+  width: 100%;
+  margin: auto;
+  padding-top: 10px;
+  background: #909294;
+}
+
+
 
 // ABOUT ME SECTION
 
 #about-me {
-  padding-top: 6em;
   background: #2b2b2b;
 }
 
@@ -103,26 +121,14 @@ section {
   height: auto;
 }
 
-#div-about-me {
-  float: right;
-  width: 75%;
-  margin: auto;
-}
-
-#div-profile-picture {
-  width: 25%;
-  float: left;
-  margin-top: 3.5em;
-  margin-left: -3em;
-}
-
 #div-about-me h2 {
-  margin: 2em 2em 0em 0em;
   font-weight: 600;
   font-size: 25px;
+  color: white;
 }
 
-#div-about-me span, p {
+#div-about-me span,
+p {
   line-height: 30px;
   margin: 1em 0em 2em 0em;
   font-weight: 100;
@@ -131,28 +137,49 @@ section {
 }
 
 #about-me-download {
-  margin-top: 3.6em;
+  margin-top: 1.6em;
   color: white;
   float: right;
-  width: 50%;
+  width: 60%;
   text-align: center;
-
 }
 
 #about-me-download span {
-color: white;
-padding: 5px 5px 5px 15px;
-font-weight: 500;
+  color: white;
+  padding: 5px 5px 5px 15px;
+  font-weight: 500;
 }
 
-#about-me-button   {
-background: #505152;
-padding: 8px 0px 8px 0px;
-width:75%;
-border-radius:4px;
+#about-me-button {
+  background: #505152;
+  padding: 8px 0px 8px 0px;
+  width: 50%;
+  border-radius: 4px;
 }
 
 #about-me-contact {
   float: left;
-  width: 50%;
+  width: 40%;
+}
+
+// RESUME SECTION
+
+#resume {
+  color: black;
+}
+
+.left-column {
+  width: 25%;
+  float: left;
+}
+
+.right-column {
+  float: right;
+  width: 75%;
+  margin: auto;
+}
+
+#resume h3, #resume span,
+ {
+  color: black;
 }
