--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -9,6 +9,14 @@ body {
 
 html {
   font-size: 62.5%; /* Sets up the Base 10 stuff */
+  //
+  //   @media (max-width: 1000px) {
+  //   font-size: calc(5px + .4vw);
+  // }
+}
+ul{
+  list-style-type: none;
+  padding-inline-start: 0em;
 }
 
 h1 {
@@ -45,30 +53,28 @@ header {
   overflow: hidden;
 }
 
-ul {
-  padding-inline-start: 0em;
-}
 
-nav ul {
-  color: white;
-  list-style: none;
-  font-size: 20;
-}
-
-div {
-  display: block;
-}
-
-nav li {
-  font-size: 14px;
-  padding-right: 13px;
-  padding-bottom: 8px;
-  padding-left: 13px;
-  margin-bottom: 0;
-  display: inline-block;
-  position: relative;
-  height: 20px;
-}
+//
+// nav ul {
+//   color: white;
+//   list-style: none;
+//   font-size: 20;
+// }
+//
+// div {
+//   display: block;
+// }
+//
+// nav li {
+//   font-size: 14px;
+//   padding-right: 13px;
+//   padding-bottom: 8px;
+//   padding-left: 13px;
+//   margin-bottom: 0;
+//   display: inline-block;
+//   position: relative;
+//   height: 20px;
+// }
 
 .headline h3 {
   margin-bottom: 25px;
