--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -1,5 +1,9 @@
-@import "../../universal/components/navigation/Navigation.scss";
+@import "../../universal/components/navigation/styles.scss";
+@import "../../universal/components/home/styles.scss";
 
+html {
+  font-size: 62.5%;
+}
 
 body {
   font-family: "opensans-regular", sans-serif;
@@ -7,32 +11,11 @@ body {
   margin: 0;
 }
 
-html {
-  font-size: 62.5%; /* Sets up the Base 10 stuff */
-  //
-  //   @media (max-width: 1000px) {
-  //   font-size: calc(5px + .4vw);
-  // }
-}
-ul{
-  list-style-type: none;
+ul {
   padding-inline-start: 0em;
 }
 
-h1 {
-  font-weight: 700;
-  margin: 100px 0 20px;
-  font-size: 90px;
-}
 
-h2 {
-  font-weight: 500;
-}
-
-h3 {
-  font-size: 22px;
-  font-weight: 400;
-}
 
 a {
   color: white;
@@ -43,66 +26,9 @@ span {
   color: white;
 }
 
-header {
-  height: 100%;
-  min-height: 500px;
-  width: 100%;
-  background: url("https://unsplash.it/1080/720/?image=377") no-repeat fixed
-    center / cover;
-  text-align: center;
-  overflow: hidden;
-}
 
 
-//
-// nav ul {
-//   color: white;
-//   list-style: none;
-//   font-size: 20;
-// }
-//
-// div {
-//   display: block;
-// }
-//
-// nav li {
-//   font-size: 14px;
-//   padding-right: 13px;
-//   padding-bottom: 8px;
-//   padding-left: 13px;
-//   margin-bottom: 0;
-//   display: inline-block;
-//   position: relative;
-//   height: 20px;
-// }
 
-.headline h3 {
-  margin-bottom: 25px;
-  color: #b8b9ba;
-  padding: 20px 40px 20px 40px;
-  margin: auto;
-  width: 80%;
-}
-
-.headline h2 {
-  font-weight: 500;
-  margin: 100px 0 20px;
-}
-
-.headline-down-button {
-  padding-top: 14em;
-}
-
-hr {
-  width: 70%;
-}
-
-.section-row {
-  margin: auto;
-  width: 96%;
-  max-width: 1020px;
-  margin: auto;
-}
 
 section {
   padding: 1em 1em 1em 1em;
@@ -113,13 +39,30 @@ section {
   overflow: hidden;
 }
 
-#navigation-links {
-  //  position: fixed;
-  width: 100%;
+.section-row {
   margin: auto;
-  padding-top: 10px;
-  background: #909294;
+  width: 96%;
+  max-width: 1020px;
+  margin: auto;
 }
+
+.left-column {
+  width: 25%;
+  float: left;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.right-column {
+  float: right;
+  width: 75%;
+  margin: auto;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+
+
 
 // ABOUT ME SECTION
 
@@ -180,20 +123,7 @@ p {
   color: black;
 }
 
-.left-column {
-  width: 25%;
-  float: left;
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
 
-.right-column {
-  float: right;
-  width: 75%;
-  margin: auto;
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
 
 #resume h2 {
   color: #2b2b2b;
@@ -219,16 +149,15 @@ p {
 #resume h2 {
   font-size: 25px;
   font-weight: 700;
-
 }
 
-#resume-separator hr{
+#resume-separator hr {
   padding: 2em;
 }
 
-#resume .resume-items{
+#resume .resume-items {
   font-weight: 400;
-  font-style:  italic;
+  font-style: italic;
   margin: auto;
   padding: 0em 0em 1em;
 }
