--- a/src/universal/components/home/styles.scss
+++ b/src/universal/components/home/styles.scss
@@ -16,7 +16,7 @@ header {
   margin: auto;
   width: 45%;
   letter-spacing: 0.2rem;
-  line-height: calc(1rem + 1.7vw));
+  line-height: calc(1rem + 1.7vw);
 }
 
 .home__headline--title {
