--- a/src/universal/components/resume/styles.scss
+++ b/src/universal/components/resume/styles.scss
@@ -1,7 +1,9 @@
 $color-cyan: #15c4ca;
 $color-darkbrown: #2b2b2b;
 $color-lightbrown: #6e7881;
-$color-lightgrey: #E6E8E6;
+$color-lightgrey: #e6e8e6;
+$color-grey: #d4d2d2cc;
+
 
 #resume {
   color: black;
@@ -13,11 +15,11 @@ $color-lightgrey: #E6E8E6;
   padding: 0em 0em 1em;
   @media (max-width: 800px) {
     text-align: center;
-    padding-bottom:3%;
+    padding-bottom: 3%;
   }
 }
-.resume__section-wrapper{
-border-bottom: 1px solid $color-lightgrey;
+.resume__section-wrapper {
+  border-bottom: 1px solid $color-lightgrey;
 }
 
 .resume__element-wrapper {
@@ -35,7 +37,6 @@ border-bottom: 1px solid $color-lightgrey;
 }
 
 .resume__element__paragraph {
-
   padding: 5px;
   color: $color-lightbrown;
   font-weight: 100;
@@ -62,7 +63,6 @@ border-bottom: 1px solid $color-lightgrey;
   font-weight: 500;
   padding-bottom: 5px;
   letter-spacing: 1px;
-
 }
 
 .resume__section__title-wrapper {
@@ -79,4 +79,35 @@ border-bottom: 1px solid $color-lightgrey;
   @media (max-width: 800px) {
     text-align: center;
   }
+}
+
+.skills__element__level {
+  position: absolute;
+  top: 0;
+  padding-right: 24px;
+  background: $color-darkbrown;
+  display: inline-block;
+  height: 42px;
+  border-radius: 3px 0 0 3px;
+}
+
+.skills__element {
+  position: relative;
+  margin-bottom: 60px;
+  background: $color-grey;
+  height: 42px;
+  border-radius: 4px;
+  list-style-type: none;
+}
+.skills__element__name {
+  color: black;
+  letter-spacing: 2px;
+  font-size: calc(1.5rem + 0.2vw);
+  top: -36px;
+  position: relative;
+  text-decoration: none;
+}
+
+.skills__section__wrapper{
+  padding-top: 5%;
 }
