Added projects section. Started contact section

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -2,6 +2,8 @@
 @import "../../universal/components/home/styles.scss";
 @import "../../universal/components/about/styles.scss";
 @import "../../universal/components/resume/styles.scss";
+@import "../../universal/components/projects/styles.scss";
+@import "../../universal/components/contact/styles.scss";
 
 html {
   font-size: 62.5%;
