--- a/src/universal/components/resume/styles.scss
+++ b/src/universal/components/resume/styles.scss
@@ -22,6 +22,12 @@ $color-grey: #d4d2d2cc;
   border-bottom: 1px solid $color-lightgrey;
 }
 
+.resume__section-wrapper {
+    &:last-child   {
+        border-bottom: 0px;
+    }
+ }
+
 .resume__element-wrapper {
   padding-bottom: 5%;
 }
