Added button animation + css refactoring

--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -5,6 +5,7 @@
 @import "../../universal/components/projects/styles.scss";
 @import "../../universal/components/contact/styles.scss";
 @import "../../universal/components/footer/styles.scss";
+@import "../../universal/components/media/styles.scss";
 
 html {
   font-size: 62.5%;
