--- a/src/universal/components/home/styles.scss
+++ b/src/universal/components/home/styles.scss
@@ -4,8 +4,8 @@ header {
   height: 100%;
   min-height: 500px;
   width: 100%;
-  background: url("https://unsplash.it/1080/720/?image=377") no-repeat center /
-    cover;
+  background: url("https://unsplash.it/1080/720/?image=377") no-repeat fixed
+    center / cover;
   text-align: center;
   overflow: hidden;
 }
