--- a/src/universal/components/about/styles.scss
+++ b/src/universal/components/about/styles.scss
@@ -1,7 +1,10 @@
 $color-darkgrey3: #4e4c4c;
+$color-darkbrown3: #75787b;
+$color-darkbrown4: #2b2b2b;
+
 
 #about-me {
-  background: #2b2b2b;
+  background:$color-darkbrown4;
 }
 
 .aboutme__picture {
@@ -16,16 +19,17 @@ $color-darkgrey3: #4e4c4c;
 
 .aboutme__right-title {
   font-weight: 600;
-  font-size: calc(2rem + 0.2vw);
+  font-size: calc(2rem + 0.7vw);
+  letter-spacing: 1px;
   color: white;
 }
 
 .aboutme__right-span {
-  line-height: calc(2rem + 1vw);
+  line-height: calc(2rem +  0.6vw);
   margin: 1em 0em 2em 0em;
   font-weight: 100;
-  font-size: calc(1.2rem + 0.2vw);
-  color: #909294;
+  font-size: calc(1.2rem + 0.3vw);
+  color: $color-darkbrown3;
 }
 
 .aboutme__right-download-wrapper {
