--- a/src/universal/components/home/styles.scss
+++ b/src/universal/components/home/styles.scss
@@ -1,4 +1,5 @@
 $color-lightgray2: #868383;
+$color-cyan1: #40cccc;
 
 header {
   height: 100%;
@@ -6,12 +7,25 @@ header {
   width: 100%;
   background: url("../../../public/images/background4.png") no-repeat fixed
     center / cover;
+  background-size: cover;
   text-align: center;
   overflow: hidden;
+
+  @media (min-width: 800px) {
+    background: url("../../../public/images/background4.png")  no-repeat fixed
+      center / cover;
+  }
 }
 
 .home__wrapper {
-  padding-top: 80px;
+  @media (min-width: 365px) {
+    padding-top: 80px;
+  }
+
+  @media (min-height: 365px) {
+    padding-top: 0px;
+  }
+
   @media (min-width: 800px) {
     padding-top: 0px;
   }
@@ -41,9 +55,16 @@ header {
 }
 
 .home__button {
-  padding-top: 20%;
   visibility: visible;
-  font-size: 20px;
+  font-size: 18px;
+  @media (min-width: 365px) {
+    padding-top: 5%;
+  }
+
+  @media (min-width: 500px) {
+    padding-top: 10%;
+  }
+
   @media (min-width: 800px) {
     padding-top: 12%;
     font-size: 16px;
@@ -69,7 +90,7 @@ header {
 .home__button--icon:hover {
   backface-visibility: hidden;
   transition: color 0.5s ease;
-  color: $color-lightgray2;
+  color: $color-cyan1;
   padding-top: 5px;
   animation: smoothPadding 0.8s ease-in infinite;
 }
